# deformable_grasping

./: .gitignore  CMakeLists.txt  README.md  simulate.py
controllers/: eef_velocity_controller.py
envs/: URDummyTask.py
include/: mujoco_wrapper.h  spnav_wrapper.h
include/ur_mujoco/: spnav_wrapper.h
learning/: data.py  lstm_autoencoder.py  lstm_vae.py  pca.py  plot_future_predictions.py  plot_hidden.py  plot_loss.py  plot_results.py  test.py  train.py
learning/loss/: loss.csv  loss_032019.csv  loss_train_30k.csv
models/: data_collection.mjb  data_collection.xml  env.txt  env.xml  shared.xml  ur3_mujoco.xml  ur5_gripah_mujoco.xml  ur_data_collection.xml
sandbox/: spnav_wrapper.cpp
src/: basic.cpp  collect_data.cpp  env.cpp  keyboard_teleop.cpp  mujoco_wrapper.cpp  spnav_wrapper.cpp
tests/: test_mujoco_wrapper.cpp
